sandbox/output
ProfitBefore.java:5: error: cannot find symbol
    static final Logger logger = 
                 ^
  symbol:   class Logger
  location: class ProfitBefore
ProfitBefore.java:6: error: cannot find symbol
        Logger.getLogger(ProfitBefore.class.getName());
        ^
  symbol:   variable Logger
  location: class ProfitBefore
2 errors
